--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -129,10 +129,16 @@ h6, h5{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  height: 100vh;
-}
+   background-attachment: fixed;
 
+}
+#nohayturno {
+  font-weight: bold;
+  border-radius: 5px;
+  border-color:#0275d8;
+  background-color:#0275d8;
+  color: white;
+}
 #modalCancha-header{
   color:black;
   text-align: center
