--- a/src/views/paginas/vistaAdmin.hbs
+++ b/src/views/paginas/vistaAdmin.hbs
@@ -33,8 +33,8 @@
     }
 
 </script>
-<div id="barraLateral" class="barraLateral" style="width: 0px;">
-    <a href="#" class="boton-cerrar" onclick="ocultarBarra()">×</a>
+<div id="barraLateral" class="barraLateral" style="width: 0px;" onmouseleave="ocultarBarra()">
+    <a href="#" class="boton-cerrar" onclick="ocultarBarra()" >×</a>
     <u>
         <li><button class="btn btn-outline-info mb-3" onclick="mostrar(2,1)" ondblclick="mostrar(2,0)">
                 <h4><b>CANCHAS</b></h4>
