--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -130,7 +130,6 @@ h6, h5{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 100vh;
 }
 
 #modalCancha-header{
@@ -287,7 +286,7 @@ h6, h5{
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
- height: 100vh;
+  background-attachment: fixed;
 }
 
 #misCanchas {
