--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -1,4 +1,4 @@
-<div id="cancha">
+<div id="cancha" style="min-height: 555px;">
     <div class="container-fluid">
         <div class="card text-center mb-4">
             <h2 class="mb-3 mx-auto">MIS CANCHAS</h2>
