--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,4 +1,4 @@
-<div id="ticket" style="min-height: 560px;">
+<div id="ticket" >
     <div class="container-fluid pt-5">
         <div class="container card text-center mb-3">
             <h5 style="color: rgba(255, 0, 0, 0.589);"><p>* Las reservas se podran cancelar 4hs antes de la fecha seleccionada</p></h5>
